# template-rust-webapp

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: cli.rs  main.rs  settings.rs
src/command/: mod.rs  run.rs
src/route/: generate_manifest.rs  image_upload.rs  images.rs  index.rs  manifest.rs  mod.rs  script.rs
templates/: base.html  generate-manifest.html.tera  image_upload.html  image_upload.html.tera  images.html  images.html.tera  index.html  index.html.tera  manifest.html  manifest.html.tera
