[package]
name = "template-rust-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.3.1", features = ["openssl"] }
async-trait = "0.1.72"
chrono = "0.4.26"
clap = { version = "4.3.17", features = ["string"] }
config = "0.13.3"
directories = "5.0.1"
env_logger = "0.10.0"
json = "0.12.4"
log = "0.4.19"
openssl = "0.10.55"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
serde_yaml = "0.9.24"
toml = "0.7.6"
