[package]
name = "template-rust-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "fixme"
path = "src/main.rs"

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.0"
actix-web = { version = "4.3.1", features = ["openssl"] }
async-trait = "0.1.72"
chrono = "0.4.26"
clap = { version = "4.3.17", features = ["string", "env"] }
config = "0.13.3"
cor-args = "0.1.0"
directories = "5.0.1"
env_logger = "0.10.0"
futures-util = "0.3.28"
json = "0.12.4"
log = "0.4.19"
openssl = "0.10.55"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
serde_yaml = "0.9.24"
tera = "1.19.0"
toml = "0.7.6"

[dev-dependencies]
tempfile = "3.8.1"
unindent = "0.2.3"
